# SuperNOVAS

./: .cproject  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  USAGE-C99.md  USAGE-CPP.md  _config.yml  build.mk  config.mk  index.md  robots.txt
.github/workflows/: analyze.yml  build.yml  cmake.yml  dox.yml  gnu.yml  indexnow.yml  test.yml
_includes/: head-custom.html
benchmark/: CMakeLists.txt
cmake/: supernovasConfig.cmake.in
doc/: CHANGELOG.md  Makefile  README.md  SuperNOVAS++_vs_astropy.md  USAGE-C99.md  USAGE-CPP.md
doc/c99/: Doxyfile  Makefile
doc/cpp/: Doxyfile  SuperNOVAS++_vs_C99.md  SuperNOVAS++_vs_astropy.md
doc/html/: README_8md.html  SuperNOVAS__vs__astropy_8md.html  USAGE-C99_8md.html  USAGE-CPP_8md.html  annotated.html  annotated_dup.js  calendar_8c.html  cio_8c.html  classes.html  cmp_8c.html  cmp_8c.js  deprecated.html  dir_459143f1e15ecbef68a46e16acf20e36.html  dir_459143f1e15ecbef68a46e16acf20e36.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  doxygen_extra.css  earth_8c.html  earth_8c.js  ephemeris_8c.html  equator_8c.html  files.html  frames_8c.html  frames_8c.js  functions.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  (+163 more)
doc/html/cpp/: Angle_8cpp.html  Apparent_8cpp.html  AstrometricPosition_8cpp.html  (+437 more)
examples/: CMakeLists.txt  Makefile
examples/c99/: CMakeLists.txt  Makefile  example-calceph.c  example-cspice.c  example-high-z.c  example-moon.c  example-orbital.c  example-star.c  example-time.c
examples/cpp/: CMakeLists.txt  Makefile  example-calceph.cpp  example-cspice.cpp  example-high-z.cpp  example-moon.cpp  example-orbital.cpp  example-rise-set.cpp  example-star.cpp  example-time.cpp
include/: novas-mutex.h  novas.h  supernovas.h
include/cuda/: novas-cuda.h  shsum.cu
include/elp2000/: elp-dis.tab.c  elp-lat.tab.c  elp-lon.tab.c  elp-pert-dis.tab.c  elp-pert-lat.tab.c  elp-pert-lon.tab.c  novas-elp.h
include/eop/: libration.tab.c  novas-eop.h  tidal.tab.c
include/nutation/: iau2006a.tab.c  iau2006b.tab.c  novas-nut.h  nu2000k.tab.c
include/tables/: ee.tab.c  sun.tab.c  tdb.tab.c
legacy/: cio_file.c  eph_manager.c  eph_manager.h  novascon.c  novascon.h  nutation.h  readeph0.c  solarsystem.h  solsys1.c  solsys2.c
sitemap/: sitemap-static.xml
src/: CMakeLists.txt  Makefile  refract.c
src/c99/: CMakeLists.txt  Makefile  calendar.c  cmp.c  earth.c  equator.c  frames.c  iers.c  itrf.c  moon.c  nutation.c  observer.c  orbital.c  parse.c  place.c  refract.c  solsys-calceph.c  solsys-cspice.c  solsys3.c  spectral.c  system.c  target.c  timescale.c  transform.c  util.c
src/cpp/: Angle.cpp  Apparent.cpp  AstrometricPosition.cpp  CMakeLists.txt  Calendar.cpp  CatalogEntry.cpp  Coordinate.cpp  EOP.cpp  Ecliptic.cpp  Equatorial.cpp  Equinox.cpp  Frame.cpp  Galactic.cpp  Geometric.cpp  Horizontal.cpp  Interferometric.cpp  Interval.cpp  Makefile  Observer.cpp  Orbital.cpp  Position.cpp  Pressure.cpp  Scalar.cpp  ScalarEvolution.cpp  ScalarVelocity.cpp  Site.cpp  Source.cpp  Spherical.cpp  Temperature.cpp  Time.cpp  TimeAngle.cpp  Track.cpp  Vector.cpp  Velocity.cpp  Weather.cpp
src/cuda/: CMakeLists.txt  Makefile  cuda.cu  nutation.cu
test/: Makefile
test/c99/: CMakeLists.txt  Makefile  test-errors.c  test-super.c
test/cpp/: ApparentTest.cpp  AstrometricPositionTest.cpp  CMakeLists.txt  CalendarTest.cpp  CatalogEntryTest.cpp  CoordinateTest.cpp  EOPTest.cpp  EclipticTest.cpp  EquatorialTest.cpp  EquinoxTest.cpp  FrameTest.cpp  GalacticTest.cpp  GeometricTest.cpp  HorizontalTest.cpp  IntervalTest.cpp  Makefile  ObserverTest.cpp  OrbitalTest.cpp  PlanetTest.cpp  PositionTest.cpp  ScalarVelocityTest.cpp  SiteTest.cpp  SourceTest.cpp  SphericalTest.cpp  TimeTest.cpp  TrackTest.cpp  VelocityTest.cpp  WeatherTest.cpp
test/src/: test-super.c
(+721 files in other folders)
